--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="noindex">
+    <meta name="description" content="Generate a Microsoft 365 bookmarks file to import into Microsoft Edge to quickly access your favorite Microsoft 365 apps and services." />
     <title>Microsoft 365 Bookmarks Generator</title>
     <link rel="icon" href="/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@300;400;500;600;700&display=swap"
